<resources>
    <!-- List of Category -->
    <string name="app_name">Together</string>
    <string-array name="Category">
        <item>Sport</item>
        <item>Videogames</item>
        <item>Cinema</item>
        <item>RPG</item>
        <item>Other</item>
    </string-array>

    <array name="CateogryArray">
        <item>Sport</item>
        <item>Videogames</item>
        <item>Cinema</item>
        <item>RPG</item>
        <item>Other</item>
    </array>

    <string name="logo">logo</string>
    <string name="activity_new_post_create_a_new_post">Create a new post</string>
    <string name="activity_new_post_step_1_choose_a_category">Step 1: Choose a category</string>
    <string name="activity_new_post_step_2_add_title_and_description">Step 2: add Title and Description</string>
    <string name="activity_new_post_title">Title</string>
    <string name="activity_new_post_add_a_description">Add a description</string>
    <string name="activity_new_post_step_3_add_more_info">Step 3: add more info</string>
    <string name="activity_new_post_we_are_a_formed_group">We are a formed group</string>
    <string name="activity_new_post_now_we_are_in">Now we are in</string>
    <string name="activity_new_post_members_we_need">Members we need</string>
    <string name="activity_new_post_publish">Publish</string>
    <string name="activity_new_post_City">City</string>

    <string name="sign_up">Sign up</string>
    <string name="app_logo">App_Logo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_the_password">Repeat the password</string>
    <string name="phone_number_facultative">Phone number (facultative)</string>
    <string name="city">City:</string>
    <string name="sign_in">Sign in</string>
    <string name="username_or_email_address">Username or email address</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="my_groups">My groups</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="update_password">Update Password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="groups_joined">Groups Joined</string>
    <string name="description">Description</string>
    <string name="gender">Gender:</string>
    <string name="avatar_of_the_user">Avatar of the user</string>
    <string name="cover_profile_page">Cover profile page</string>
    <string name="age">Age:</string>
    <string name="surname">Surname</string>

</resources>