<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    android:background="@drawable/background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/my_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Together"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />

    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_appbar"
        android:autofillHints="" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentPassword"
        android:layout_marginTop="20dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_key_24"
        android:drawablePadding="20dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/currentPassword"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="@+id/currentPassword"
        app:layout_constraintTop_toBottomOf="@+id/currentPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentPassword"
        android:layout_marginTop="20dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_key_24"
        android:drawablePadding="20dp"
        android:hint="@string/repeat_new_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/newPassword"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="@+id/newPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/updatePasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/davide"
        android:text="@string/update_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/repeatPassword"
        app:layout_constraintStart_toStartOf="@+id/repeatPassword"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>